# data-challenge

./: .gitignore  README.md  SETUP.md  default.env  pyproject.toml
1-sql/: messy_course_engagement_duckdb.sql
2-dbt_project/: README.md  dbt_project.yml  profiles.yml
2-dbt_project/models/: sources.yml
2-dbt_project/models/base/: README.md
2-dbt_project/models/marts/: README.md
3-airflow/dags/: pipeline.py
data/: raw_courses.csv  raw_enrolments.csv  raw_events.csv  raw_users.csv
notebooks/: example_data_exploration.ipynb
scripts/: init_db.py
