[project]
name = "apolitical-data-lead"
version = "0.1.0"
description = "Apolitical Data Lead technical test with dbt and Airflow"
requires-python = ">=3.9"
dependencies = [
    "apache-airflow==2.11.0",
    "dbt-core>=1.7.0",
    "dbt-duckdb>=1.7.0",
    "duckdb>=0.9.0",
    "notebook>=7.0.0",
    "jupyterlab>=4.0.0",
    "pandas>=2.0.0",
]
